# Triangulation

./: .gitignore  1final_system_matrix_A.txt  1global_stiffness_matrix_K.txt  2.cpp  2final_system_matrix_A.txt  2global_stiffness_matrix_K.txt  2local_stiffness_matrices_Kloc.txt  3.cpp  3local_stiffness_matrices_Kloc.txt  CMakeLists.txt  bindings.cpp  calculate.py  final_system_matrix_A.txt  global_rhs_F.txt  global_stiffness_matrix_K.txt  local_stiffness_matrices_Kloc.txt  main.cpp  readme.md  setup.py  setup.txt  solve.py  test.py  trian2gulation_export_20251110_201323.txt  triangulation_export_20251110_223033.txt  triangulation_export_20251110_224530.txt  triangulation_export_20251202_021029.txt  triangulation_export_20251202_023516.txt  triangulation_export_20251202_023637.txt  visualize.py  ~$Звіт.docx  Звіт лаб2.docx  Звіт лаб3.docx  Звіт лаб4.docx  Звіт.docx
triangul/: geogebra-export.ggb
